# observability

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  gunicorn.conf.py  loki-config.yaml  otel-config.yaml  prometheus.yml  pyproject.toml  tempo.yaml
grafana/dashboards/: pricewatch_dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasource.yml  datasources.yml
src/: gunicorn.conf.py  manage.py
src/core/: settings.py  telemetry.py  urls.py  wsgi.py
src/tracker/: api.py  apps.py  dramatiq_telemetry.py  middleware.py  models.py  schema.py  signals.py  tasks.py
src/tracker/migrations/: 0001_initial.py
